--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     </queries>
 
     <application
-        android:label="pruebavercel"
+        android:label="AlzAlert"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
