Se logra enviar el mensaje junto a la ubicación

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.alzalert">
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.READ_SMS"/>
@@ -23,7 +23,8 @@
     <application
         android:label="alzalert"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:enableOnBackInvokedCallback="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -50,10 +51,29 @@
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <receiver
             android:name="com.shounakmulay.telephony.sms.IncomingSmsReceiver"
+            android:permission="android.permission.BROADCAST_SMS"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
+        </receiver>
+
+        <receiver 
+            android:name="com.shounakmulay.telephony.sms.SmsStatusReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_DELIVERED"/>
+            </intent-filter>
+        </receiver>
+        
+        <receiver 
+            android:name="com.shounakmulay.telephony.sms.SmsSentReceiver"
+            android:exported="true">
+        </receiver>
+
+        <receiver 
+            android:name="com.shounakmulay.telephony.sms.SmsDeliveredBroadcastReceiver"
+            android:exported="true">
         </receiver>
         <meta-data
             android:name="flutterEmbedding"
