--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider:
   cloud_firestore:
   geolocator: ^11.0.0
+  flutter_blue_plus: ^1.35.5
 
 dev_dependencies:
   flutter_test:
