--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   geolocator: ^11.0.0
   geocoding: ^2.1.0
   flutter_blue_plus: ^1.35.5
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
